noinst_LIBRARIES = libRNA.a
 
libRNA_a_SOURCES =  fold_vars.c read_epars.c \
        energy_par.c utils.c fold.c params.c alifold.c PS_dot.c aln_util.c naview.c 

noinst_HEADERS =alifold.h energy_const.h fold.h\
        intloops.h params.h utils.h energy_par.h fold_vars.h\
        pair_mat.h PS_dot.h aln_util.h circfold.inc alicircfold.inc			
			   
