noinst_LIBRARIES = libPHYML.a

libPHYML_a_SOURCES =  alrt.c  bionj.c  cl.c  draw.c  eigen.c  free.c  interface.c  lk.c  m4.c  main.c  mc.c   models.c  optimiz.c  options.c  pars.c  rates.c  simu.c  spr.c  utilities.c

noinst_HEADERS = alrt.h  bionj.h  cl.h  draw.h  eigen.h  free.h  interface.h  lk.h  m4.h  mc.h   models.h  optimiz.h  options.h  pars.h  rates.h  simu.h  spr.h  utilities.h mg.h
