noinst_LIBRARIES = libPHYML.a
 
libPHYML_a_SOURCES =  alrt.c  avx.c  bionj.c  cl.c  draw.c  free.c  help.c  interface.c  io.c  make.c  mg.c  models.c  nexus.c  pars.c  rates.c  simu.c  sse.c  tbe.c  tiporder.c  xml.c	ancestral.c  checkpoint.c  date.c  eigen.c   init.c  lk.c  main.c  mcmc.c  mixt.c  optimiz.c  phyrex.c  rwrapper.c  spr.c  stats.c  times.c  utilities.c


noinst_HEADERS =	alrt.h  avx.h  bionj.h  cl.h  draw.h  free.h  help.h  interface.h  io.h  m4.h  mcmc.h  mixt.h  mpi_boot.h  nexus.h  pars.h  rates.h  simu.h  sse.h  tbe.h  tiporder.h  xml.h	ancestral.h  beagle_utils.h  checkpoint.h  date.h  eigen.h  geo.h  init.h  invitee.h  lk.h  make.h  mg.h  models.h  mxml.h  optimiz.h  phyrex.h  rwrapper.h  spr.h  stats.h  times.h  utilities.h	
			  
